re PR rtl-optimization/38722 (Revision 143027 causes ICE in find_decomposable_subregs)

PR rtl-optimization/38722
	* combine.c (try_combine): Don't modify PATTERN (i3) and notes
	too early, only set a flag and modify after last possible
	undo_all point.

	* gfortran.dg/pr38722.f90: New test.

From-SVN: r143132